Parser.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.1.1 from Parser.y
-----------------------------------------------------------------------------

state 91 contains 1 shift/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_parser -> Start                             (0)
	Start -> "fun" "main" "(" ")" Block                (1)
	Block -> "{" Blstm "}"                             (2)
	Block -> "{" "}"                                   (3)
	Blstm -> Stm Blstm                                 (4)
	Blstm -> Stm                                       (5)
	ExpStmt -> Exp                                     (6)
	PrintStmt -> "print" "(" PrintArg ")"              (7)
	PrintStmt -> "println" "(" PrintArg ")"            (8)
	Stm -> Block                                       (9)
	Stm -> ExpStmt                                     (10)
	Stm -> VarValDecl                                  (11)
	Stm -> Assi                                        (12)
	Stm -> Iff                                         (13)
	Stm -> Wh                                          (14)
	Stm -> PrintStmt                                   (15)
	Stm -> ReadLn                                      (16)
	PrintArg -> Exp                                    (17)
	VarValDecl -> "var" id "=" Exp                     (18)
	VarValDecl -> "val" id "=" Exp                     (19)
	Assi -> id "=" Exp                                 (20)
	Iff -> "if" "(" Exp ")" Stm                        (21)
	Iff -> "if" "(" Exp ")" Stm "else" Stm             (22)
	Wh -> "while" "(" Exp ")" Stm                      (23)
	ReadLn -> "var" id "=" "readln" "(" ")"            (24)
	ReadLn -> "val" id "=" "readln" "(" ")"            (25)
	Str -> str                                         (26)
	Exp -> Term                                        (27)
	Exp -> Exp "+" Exp                                 (28)
	Exp -> Exp "-" Exp                                 (29)
	Exp -> Exp "*" Exp                                 (30)
	Exp -> Exp "/" Exp                                 (31)
	Exp -> Exp "%" Exp                                 (32)
	Exp -> Exp "==" Exp                                (33)
	Exp -> Exp "!=" Exp                                (34)
	Exp -> Exp "<" Exp                                 (35)
	Exp -> Exp "<=" Exp                                (36)
	Exp -> Exp ">" Exp                                 (37)
	Exp -> Exp ">=" Exp                                (38)
	Exp -> Exp "||" Exp                                (39)
	Exp -> Exp "&&" Exp                                (40)
	Exp -> "!" Term                                    (41)
	Term -> num                                        (42)
	Term -> Str                                        (43)
	Term -> id                                         (44)
	Term -> "true"                                     (45)
	Term -> "false"                                    (46)
	Term -> "(" Exp ")"                                (47)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	num            { NUM $$ }
	"+"            { PLUS }
	"-"            { MINUS }
	"*"            { TIMES }
	"/"            { DIV }
	"%"            { MOD }
	"("            { LPAREN }
	")"            { RPAREN }
	"{"            { LBRACKET }
	"}"            { RBRACKET }
	"="            { ASSIGN }
	"=="           { EQUAL }
	"!="           { NOTEQUAL }
	"<"            { LESSTHAN }
	"<="           { LESSEQ }
	">"            { GREATERTHAN }
	">="           { GREATEREQ }
	"!"            { NOT }
	"||"           { OR }
	"&&"           { AND }
	"true"         { TRUE }
	"false"        { FALSE }
	"if"           { IF }
	"else"         { ELSE }
	"while"        { WHILE }
	"var"          { VAR }
	"val"          { VAL }
	"println"      { PRINTLN }
	"print"        { PRINT }
	"readln"       { READLN }
	"fun"          { FUN }
	"main"         { MAIN }
	id             { IDENT $$ }
	str            { STR $$ }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_parser   rule  0
	Start           rule  1
	Block           rules 2, 3
	Blstm           rules 4, 5
	ExpStmt         rule  6
	PrintStmt       rules 7, 8
	Stm             rules 9, 10, 11, 12, 13, 14, 15, 16
	PrintArg        rule  17
	VarValDecl      rules 18, 19
	Assi            rule  20
	Iff             rules 21, 22
	Wh              rule  23
	ReadLn          rules 24, 25
	Str             rule  26
	Exp             rules 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41
	Term            rules 42, 43, 44, 45, 46, 47

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_parser -> . Start                            (rule 0)

	"fun"          shift, and enter state 2

	Start          goto state 3

State 1

	Start -> . "fun" "main" "(" ")" Block               (rule 1)

	"fun"          shift, and enter state 2


State 2

	Start -> "fun" . "main" "(" ")" Block               (rule 1)

	"main"         shift, and enter state 4


State 3

	%start_parser -> Start .                            (rule 0)

	%eof           accept


State 4

	Start -> "fun" "main" . "(" ")" Block               (rule 1)

	"("            shift, and enter state 5


State 5

	Start -> "fun" "main" "(" . ")" Block               (rule 1)

	")"            shift, and enter state 6


State 6

	Start -> "fun" "main" "(" ")" . Block               (rule 1)

	"{"            shift, and enter state 8

	Block          goto state 7

State 7

	Start -> "fun" "main" "(" ")" Block .               (rule 1)

	%eof           reduce using rule 1


State 8

	Block -> "{" . Blstm "}"                            (rule 2)
	Block -> "{" . "}"                                  (rule 3)

	num            shift, and enter state 22
	"("            shift, and enter state 23
	"{"            shift, and enter state 8
	"}"            shift, and enter state 24
	"!"            shift, and enter state 25
	"true"         shift, and enter state 26
	"false"        shift, and enter state 27
	"if"           shift, and enter state 28
	"while"        shift, and enter state 29
	"var"          shift, and enter state 30
	"val"          shift, and enter state 31
	"println"      shift, and enter state 32
	"print"        shift, and enter state 33
	id             shift, and enter state 34
	str            shift, and enter state 35

	Block          goto state 9
	Blstm          goto state 10
	ExpStmt        goto state 11
	PrintStmt      goto state 12
	Stm            goto state 13
	VarValDecl     goto state 14
	Assi           goto state 15
	Iff            goto state 16
	Wh             goto state 17
	ReadLn         goto state 18
	Str            goto state 19
	Exp            goto state 20
	Term           goto state 21

State 9

	Stm -> Block .                                      (rule 9)

	num            reduce using rule 9
	"("            reduce using rule 9
	"{"            reduce using rule 9
	"}"            reduce using rule 9
	"!"            reduce using rule 9
	"true"         reduce using rule 9
	"false"        reduce using rule 9
	"if"           reduce using rule 9
	"else"         reduce using rule 9
	"while"        reduce using rule 9
	"var"          reduce using rule 9
	"val"          reduce using rule 9
	"println"      reduce using rule 9
	"print"        reduce using rule 9
	id             reduce using rule 9
	str            reduce using rule 9


State 10

	Block -> "{" Blstm . "}"                            (rule 2)

	"}"            shift, and enter state 60


State 11

	Stm -> ExpStmt .                                    (rule 10)

	num            reduce using rule 10
	"("            reduce using rule 10
	"{"            reduce using rule 10
	"}"            reduce using rule 10
	"!"            reduce using rule 10
	"true"         reduce using rule 10
	"false"        reduce using rule 10
	"if"           reduce using rule 10
	"else"         reduce using rule 10
	"while"        reduce using rule 10
	"var"          reduce using rule 10
	"val"          reduce using rule 10
	"println"      reduce using rule 10
	"print"        reduce using rule 10
	id             reduce using rule 10
	str            reduce using rule 10


State 12

	Stm -> PrintStmt .                                  (rule 15)

	num            reduce using rule 15
	"("            reduce using rule 15
	"{"            reduce using rule 15
	"}"            reduce using rule 15
	"!"            reduce using rule 15
	"true"         reduce using rule 15
	"false"        reduce using rule 15
	"if"           reduce using rule 15
	"else"         reduce using rule 15
	"while"        reduce using rule 15
	"var"          reduce using rule 15
	"val"          reduce using rule 15
	"println"      reduce using rule 15
	"print"        reduce using rule 15
	id             reduce using rule 15
	str            reduce using rule 15


State 13

	Blstm -> Stm . Blstm                                (rule 4)
	Blstm -> Stm .                                      (rule 5)

	num            shift, and enter state 22
	"("            shift, and enter state 23
	"{"            shift, and enter state 8
	"}"            reduce using rule 5
	"!"            shift, and enter state 25
	"true"         shift, and enter state 26
	"false"        shift, and enter state 27
	"if"           shift, and enter state 28
	"while"        shift, and enter state 29
	"var"          shift, and enter state 30
	"val"          shift, and enter state 31
	"println"      shift, and enter state 32
	"print"        shift, and enter state 33
	id             shift, and enter state 34
	str            shift, and enter state 35

	Block          goto state 9
	Blstm          goto state 59
	ExpStmt        goto state 11
	PrintStmt      goto state 12
	Stm            goto state 13
	VarValDecl     goto state 14
	Assi           goto state 15
	Iff            goto state 16
	Wh             goto state 17
	ReadLn         goto state 18
	Str            goto state 19
	Exp            goto state 20
	Term           goto state 21

State 14

	Stm -> VarValDecl .                                 (rule 11)

	num            reduce using rule 11
	"("            reduce using rule 11
	"{"            reduce using rule 11
	"}"            reduce using rule 11
	"!"            reduce using rule 11
	"true"         reduce using rule 11
	"false"        reduce using rule 11
	"if"           reduce using rule 11
	"else"         reduce using rule 11
	"while"        reduce using rule 11
	"var"          reduce using rule 11
	"val"          reduce using rule 11
	"println"      reduce using rule 11
	"print"        reduce using rule 11
	id             reduce using rule 11
	str            reduce using rule 11


State 15

	Stm -> Assi .                                       (rule 12)

	num            reduce using rule 12
	"("            reduce using rule 12
	"{"            reduce using rule 12
	"}"            reduce using rule 12
	"!"            reduce using rule 12
	"true"         reduce using rule 12
	"false"        reduce using rule 12
	"if"           reduce using rule 12
	"else"         reduce using rule 12
	"while"        reduce using rule 12
	"var"          reduce using rule 12
	"val"          reduce using rule 12
	"println"      reduce using rule 12
	"print"        reduce using rule 12
	id             reduce using rule 12
	str            reduce using rule 12


State 16

	Stm -> Iff .                                        (rule 13)

	num            reduce using rule 13
	"("            reduce using rule 13
	"{"            reduce using rule 13
	"}"            reduce using rule 13
	"!"            reduce using rule 13
	"true"         reduce using rule 13
	"false"        reduce using rule 13
	"if"           reduce using rule 13
	"else"         reduce using rule 13
	"while"        reduce using rule 13
	"var"          reduce using rule 13
	"val"          reduce using rule 13
	"println"      reduce using rule 13
	"print"        reduce using rule 13
	id             reduce using rule 13
	str            reduce using rule 13


State 17

	Stm -> Wh .                                         (rule 14)

	num            reduce using rule 14
	"("            reduce using rule 14
	"{"            reduce using rule 14
	"}"            reduce using rule 14
	"!"            reduce using rule 14
	"true"         reduce using rule 14
	"false"        reduce using rule 14
	"if"           reduce using rule 14
	"else"         reduce using rule 14
	"while"        reduce using rule 14
	"var"          reduce using rule 14
	"val"          reduce using rule 14
	"println"      reduce using rule 14
	"print"        reduce using rule 14
	id             reduce using rule 14
	str            reduce using rule 14


State 18

	Stm -> ReadLn .                                     (rule 16)

	num            reduce using rule 16
	"("            reduce using rule 16
	"{"            reduce using rule 16
	"}"            reduce using rule 16
	"!"            reduce using rule 16
	"true"         reduce using rule 16
	"false"        reduce using rule 16
	"if"           reduce using rule 16
	"else"         reduce using rule 16
	"while"        reduce using rule 16
	"var"          reduce using rule 16
	"val"          reduce using rule 16
	"println"      reduce using rule 16
	"print"        reduce using rule 16
	id             reduce using rule 16
	str            reduce using rule 16


State 19

	Term -> Str .                                       (rule 43)

	num            reduce using rule 43
	"+"            reduce using rule 43
	"-"            reduce using rule 43
	"*"            reduce using rule 43
	"/"            reduce using rule 43
	"%"            reduce using rule 43
	"("            reduce using rule 43
	")"            reduce using rule 43
	"{"            reduce using rule 43
	"}"            reduce using rule 43
	"=="           reduce using rule 43
	"!="           reduce using rule 43
	"<"            reduce using rule 43
	"<="           reduce using rule 43
	">"            reduce using rule 43
	">="           reduce using rule 43
	"!"            reduce using rule 43
	"||"           reduce using rule 43
	"&&"           reduce using rule 43
	"true"         reduce using rule 43
	"false"        reduce using rule 43
	"if"           reduce using rule 43
	"else"         reduce using rule 43
	"while"        reduce using rule 43
	"var"          reduce using rule 43
	"val"          reduce using rule 43
	"println"      reduce using rule 43
	"print"        reduce using rule 43
	id             reduce using rule 43
	str            reduce using rule 43


State 20

	ExpStmt -> Exp .                                    (rule 6)
	Exp -> Exp . "+" Exp                                (rule 28)
	Exp -> Exp . "-" Exp                                (rule 29)
	Exp -> Exp . "*" Exp                                (rule 30)
	Exp -> Exp . "/" Exp                                (rule 31)
	Exp -> Exp . "%" Exp                                (rule 32)
	Exp -> Exp . "==" Exp                               (rule 33)
	Exp -> Exp . "!=" Exp                               (rule 34)
	Exp -> Exp . "<" Exp                                (rule 35)
	Exp -> Exp . "<=" Exp                               (rule 36)
	Exp -> Exp . ">" Exp                                (rule 37)
	Exp -> Exp . ">=" Exp                               (rule 38)
	Exp -> Exp . "||" Exp                               (rule 39)
	Exp -> Exp . "&&" Exp                               (rule 40)

	num            reduce using rule 6
	"+"            shift, and enter state 46
	"-"            shift, and enter state 47
	"*"            shift, and enter state 48
	"/"            shift, and enter state 49
	"%"            shift, and enter state 50
	"("            reduce using rule 6
	"{"            reduce using rule 6
	"}"            reduce using rule 6
	"=="           shift, and enter state 51
	"!="           shift, and enter state 52
	"<"            shift, and enter state 53
	"<="           shift, and enter state 54
	">"            shift, and enter state 55
	">="           shift, and enter state 56
	"!"            reduce using rule 6
	"||"           shift, and enter state 57
	"&&"           shift, and enter state 58
	"true"         reduce using rule 6
	"false"        reduce using rule 6
	"if"           reduce using rule 6
	"else"         reduce using rule 6
	"while"        reduce using rule 6
	"var"          reduce using rule 6
	"val"          reduce using rule 6
	"println"      reduce using rule 6
	"print"        reduce using rule 6
	id             reduce using rule 6
	str            reduce using rule 6


State 21

	Exp -> Term .                                       (rule 27)

	num            reduce using rule 27
	"+"            reduce using rule 27
	"-"            reduce using rule 27
	"*"            reduce using rule 27
	"/"            reduce using rule 27
	"%"            reduce using rule 27
	"("            reduce using rule 27
	")"            reduce using rule 27
	"{"            reduce using rule 27
	"}"            reduce using rule 27
	"=="           reduce using rule 27
	"!="           reduce using rule 27
	"<"            reduce using rule 27
	"<="           reduce using rule 27
	">"            reduce using rule 27
	">="           reduce using rule 27
	"!"            reduce using rule 27
	"||"           reduce using rule 27
	"&&"           reduce using rule 27
	"true"         reduce using rule 27
	"false"        reduce using rule 27
	"if"           reduce using rule 27
	"else"         reduce using rule 27
	"while"        reduce using rule 27
	"var"          reduce using rule 27
	"val"          reduce using rule 27
	"println"      reduce using rule 27
	"print"        reduce using rule 27
	id             reduce using rule 27
	str            reduce using rule 27


State 22

	Term -> num .                                       (rule 42)

	num            reduce using rule 42
	"+"            reduce using rule 42
	"-"            reduce using rule 42
	"*"            reduce using rule 42
	"/"            reduce using rule 42
	"%"            reduce using rule 42
	"("            reduce using rule 42
	")"            reduce using rule 42
	"{"            reduce using rule 42
	"}"            reduce using rule 42
	"=="           reduce using rule 42
	"!="           reduce using rule 42
	"<"            reduce using rule 42
	"<="           reduce using rule 42
	">"            reduce using rule 42
	">="           reduce using rule 42
	"!"            reduce using rule 42
	"||"           reduce using rule 42
	"&&"           reduce using rule 42
	"true"         reduce using rule 42
	"false"        reduce using rule 42
	"if"           reduce using rule 42
	"else"         reduce using rule 42
	"while"        reduce using rule 42
	"var"          reduce using rule 42
	"val"          reduce using rule 42
	"println"      reduce using rule 42
	"print"        reduce using rule 42
	id             reduce using rule 42
	str            reduce using rule 42


State 23

	Term -> "(" . Exp ")"                               (rule 47)

	num            shift, and enter state 22
	"("            shift, and enter state 23
	"!"            shift, and enter state 25
	"true"         shift, and enter state 26
	"false"        shift, and enter state 27
	id             shift, and enter state 44
	str            shift, and enter state 35

	Str            goto state 19
	Exp            goto state 45
	Term           goto state 21

State 24

	Block -> "{" "}" .                                  (rule 3)

	num            reduce using rule 3
	"("            reduce using rule 3
	"{"            reduce using rule 3
	"}"            reduce using rule 3
	"!"            reduce using rule 3
	"true"         reduce using rule 3
	"false"        reduce using rule 3
	"if"           reduce using rule 3
	"else"         reduce using rule 3
	"while"        reduce using rule 3
	"var"          reduce using rule 3
	"val"          reduce using rule 3
	"println"      reduce using rule 3
	"print"        reduce using rule 3
	id             reduce using rule 3
	str            reduce using rule 3
	%eof           reduce using rule 3


State 25

	Exp -> "!" . Term                                   (rule 41)

	num            shift, and enter state 22
	"("            shift, and enter state 23
	"true"         shift, and enter state 26
	"false"        shift, and enter state 27
	id             shift, and enter state 44
	str            shift, and enter state 35

	Str            goto state 19
	Term           goto state 43

State 26

	Term -> "true" .                                    (rule 45)

	num            reduce using rule 45
	"+"            reduce using rule 45
	"-"            reduce using rule 45
	"*"            reduce using rule 45
	"/"            reduce using rule 45
	"%"            reduce using rule 45
	"("            reduce using rule 45
	")"            reduce using rule 45
	"{"            reduce using rule 45
	"}"            reduce using rule 45
	"=="           reduce using rule 45
	"!="           reduce using rule 45
	"<"            reduce using rule 45
	"<="           reduce using rule 45
	">"            reduce using rule 45
	">="           reduce using rule 45
	"!"            reduce using rule 45
	"||"           reduce using rule 45
	"&&"           reduce using rule 45
	"true"         reduce using rule 45
	"false"        reduce using rule 45
	"if"           reduce using rule 45
	"else"         reduce using rule 45
	"while"        reduce using rule 45
	"var"          reduce using rule 45
	"val"          reduce using rule 45
	"println"      reduce using rule 45
	"print"        reduce using rule 45
	id             reduce using rule 45
	str            reduce using rule 45


State 27

	Term -> "false" .                                   (rule 46)

	num            reduce using rule 46
	"+"            reduce using rule 46
	"-"            reduce using rule 46
	"*"            reduce using rule 46
	"/"            reduce using rule 46
	"%"            reduce using rule 46
	"("            reduce using rule 46
	")"            reduce using rule 46
	"{"            reduce using rule 46
	"}"            reduce using rule 46
	"=="           reduce using rule 46
	"!="           reduce using rule 46
	"<"            reduce using rule 46
	"<="           reduce using rule 46
	">"            reduce using rule 46
	">="           reduce using rule 46
	"!"            reduce using rule 46
	"||"           reduce using rule 46
	"&&"           reduce using rule 46
	"true"         reduce using rule 46
	"false"        reduce using rule 46
	"if"           reduce using rule 46
	"else"         reduce using rule 46
	"while"        reduce using rule 46
	"var"          reduce using rule 46
	"val"          reduce using rule 46
	"println"      reduce using rule 46
	"print"        reduce using rule 46
	id             reduce using rule 46
	str            reduce using rule 46


State 28

	Iff -> "if" . "(" Exp ")" Stm                       (rule 21)
	Iff -> "if" . "(" Exp ")" Stm "else" Stm            (rule 22)

	"("            shift, and enter state 42


State 29

	Wh -> "while" . "(" Exp ")" Stm                     (rule 23)

	"("            shift, and enter state 41


State 30

	VarValDecl -> "var" . id "=" Exp                    (rule 18)
	ReadLn -> "var" . id "=" "readln" "(" ")"           (rule 24)

	id             shift, and enter state 40


State 31

	VarValDecl -> "val" . id "=" Exp                    (rule 19)
	ReadLn -> "val" . id "=" "readln" "(" ")"           (rule 25)

	id             shift, and enter state 39


State 32

	PrintStmt -> "println" . "(" PrintArg ")"           (rule 8)

	"("            shift, and enter state 38


State 33

	PrintStmt -> "print" . "(" PrintArg ")"             (rule 7)

	"("            shift, and enter state 37


State 34

	Assi -> id . "=" Exp                                (rule 20)
	Term -> id .                                        (rule 44)

	num            reduce using rule 44
	"+"            reduce using rule 44
	"-"            reduce using rule 44
	"*"            reduce using rule 44
	"/"            reduce using rule 44
	"%"            reduce using rule 44
	"("            reduce using rule 44
	"{"            reduce using rule 44
	"}"            reduce using rule 44
	"="            shift, and enter state 36
	"=="           reduce using rule 44
	"!="           reduce using rule 44
	"<"            reduce using rule 44
	"<="           reduce using rule 44
	">"            reduce using rule 44
	">="           reduce using rule 44
	"!"            reduce using rule 44
	"||"           reduce using rule 44
	"&&"           reduce using rule 44
	"true"         reduce using rule 44
	"false"        reduce using rule 44
	"if"           reduce using rule 44
	"else"         reduce using rule 44
	"while"        reduce using rule 44
	"var"          reduce using rule 44
	"val"          reduce using rule 44
	"println"      reduce using rule 44
	"print"        reduce using rule 44
	id             reduce using rule 44
	str            reduce using rule 44


State 35

	Str -> str .                                        (rule 26)

	num            reduce using rule 26
	"+"            reduce using rule 26
	"-"            reduce using rule 26
	"*"            reduce using rule 26
	"/"            reduce using rule 26
	"%"            reduce using rule 26
	"("            reduce using rule 26
	")"            reduce using rule 26
	"{"            reduce using rule 26
	"}"            reduce using rule 26
	"=="           reduce using rule 26
	"!="           reduce using rule 26
	"<"            reduce using rule 26
	"<="           reduce using rule 26
	">"            reduce using rule 26
	">="           reduce using rule 26
	"!"            reduce using rule 26
	"||"           reduce using rule 26
	"&&"           reduce using rule 26
	"true"         reduce using rule 26
	"false"        reduce using rule 26
	"if"           reduce using rule 26
	"else"         reduce using rule 26
	"while"        reduce using rule 26
	"var"          reduce using rule 26
	"val"          reduce using rule 26
	"println"      reduce using rule 26
	"print"        reduce using rule 26
	id             reduce using rule 26
	str            reduce using rule 26


State 36

	Assi -> id "=" . Exp                                (rule 20)

	num            shift, and enter state 22
	"("            shift, and enter state 23
	"!"            shift, and enter state 25
	"true"         shift, and enter state 26
	"false"        shift, and enter state 27
	id             shift, and enter state 44
	str            shift, and enter state 35

	Str            goto state 19
	Exp            goto state 82
	Term           goto state 21

State 37

	PrintStmt -> "print" "(" . PrintArg ")"             (rule 7)

	num            shift, and enter state 22
	"("            shift, and enter state 23
	"!"            shift, and enter state 25
	"true"         shift, and enter state 26
	"false"        shift, and enter state 27
	id             shift, and enter state 44
	str            shift, and enter state 35

	PrintArg       goto state 81
	Str            goto state 19
	Exp            goto state 80
	Term           goto state 21

State 38

	PrintStmt -> "println" "(" . PrintArg ")"           (rule 8)

	num            shift, and enter state 22
	"("            shift, and enter state 23
	"!"            shift, and enter state 25
	"true"         shift, and enter state 26
	"false"        shift, and enter state 27
	id             shift, and enter state 44
	str            shift, and enter state 35

	PrintArg       goto state 79
	Str            goto state 19
	Exp            goto state 80
	Term           goto state 21

State 39

	VarValDecl -> "val" id . "=" Exp                    (rule 19)
	ReadLn -> "val" id . "=" "readln" "(" ")"           (rule 25)

	"="            shift, and enter state 78


State 40

	VarValDecl -> "var" id . "=" Exp                    (rule 18)
	ReadLn -> "var" id . "=" "readln" "(" ")"           (rule 24)

	"="            shift, and enter state 77


State 41

	Wh -> "while" "(" . Exp ")" Stm                     (rule 23)

	num            shift, and enter state 22
	"("            shift, and enter state 23
	"!"            shift, and enter state 25
	"true"         shift, and enter state 26
	"false"        shift, and enter state 27
	id             shift, and enter state 44
	str            shift, and enter state 35

	Str            goto state 19
	Exp            goto state 76
	Term           goto state 21

State 42

	Iff -> "if" "(" . Exp ")" Stm                       (rule 21)
	Iff -> "if" "(" . Exp ")" Stm "else" Stm            (rule 22)

	num            shift, and enter state 22
	"("            shift, and enter state 23
	"!"            shift, and enter state 25
	"true"         shift, and enter state 26
	"false"        shift, and enter state 27
	id             shift, and enter state 44
	str            shift, and enter state 35

	Str            goto state 19
	Exp            goto state 75
	Term           goto state 21

State 43

	Exp -> "!" Term .                                   (rule 41)

	num            reduce using rule 41
	"+"            reduce using rule 41
	"-"            reduce using rule 41
	"*"            reduce using rule 41
	"/"            reduce using rule 41
	"%"            reduce using rule 41
	"("            reduce using rule 41
	")"            reduce using rule 41
	"{"            reduce using rule 41
	"}"            reduce using rule 41
	"=="           reduce using rule 41
	"!="           reduce using rule 41
	"<"            reduce using rule 41
	"<="           reduce using rule 41
	">"            reduce using rule 41
	">="           reduce using rule 41
	"!"            reduce using rule 41
	"||"           reduce using rule 41
	"&&"           reduce using rule 41
	"true"         reduce using rule 41
	"false"        reduce using rule 41
	"if"           reduce using rule 41
	"else"         reduce using rule 41
	"while"        reduce using rule 41
	"var"          reduce using rule 41
	"val"          reduce using rule 41
	"println"      reduce using rule 41
	"print"        reduce using rule 41
	id             reduce using rule 41
	str            reduce using rule 41


State 44

	Term -> id .                                        (rule 44)

	num            reduce using rule 44
	"+"            reduce using rule 44
	"-"            reduce using rule 44
	"*"            reduce using rule 44
	"/"            reduce using rule 44
	"%"            reduce using rule 44
	"("            reduce using rule 44
	")"            reduce using rule 44
	"{"            reduce using rule 44
	"}"            reduce using rule 44
	"=="           reduce using rule 44
	"!="           reduce using rule 44
	"<"            reduce using rule 44
	"<="           reduce using rule 44
	">"            reduce using rule 44
	">="           reduce using rule 44
	"!"            reduce using rule 44
	"||"           reduce using rule 44
	"&&"           reduce using rule 44
	"true"         reduce using rule 44
	"false"        reduce using rule 44
	"if"           reduce using rule 44
	"else"         reduce using rule 44
	"while"        reduce using rule 44
	"var"          reduce using rule 44
	"val"          reduce using rule 44
	"println"      reduce using rule 44
	"print"        reduce using rule 44
	id             reduce using rule 44
	str            reduce using rule 44


State 45

	Exp -> Exp . "+" Exp                                (rule 28)
	Exp -> Exp . "-" Exp                                (rule 29)
	Exp -> Exp . "*" Exp                                (rule 30)
	Exp -> Exp . "/" Exp                                (rule 31)
	Exp -> Exp . "%" Exp                                (rule 32)
	Exp -> Exp . "==" Exp                               (rule 33)
	Exp -> Exp . "!=" Exp                               (rule 34)
	Exp -> Exp . "<" Exp                                (rule 35)
	Exp -> Exp . "<=" Exp                               (rule 36)
	Exp -> Exp . ">" Exp                                (rule 37)
	Exp -> Exp . ">=" Exp                               (rule 38)
	Exp -> Exp . "||" Exp                               (rule 39)
	Exp -> Exp . "&&" Exp                               (rule 40)
	Term -> "(" Exp . ")"                               (rule 47)

	"+"            shift, and enter state 46
	"-"            shift, and enter state 47
	"*"            shift, and enter state 48
	"/"            shift, and enter state 49
	"%"            shift, and enter state 50
	")"            shift, and enter state 74
	"=="           shift, and enter state 51
	"!="           shift, and enter state 52
	"<"            shift, and enter state 53
	"<="           shift, and enter state 54
	">"            shift, and enter state 55
	">="           shift, and enter state 56
	"||"           shift, and enter state 57
	"&&"           shift, and enter state 58


State 46

	Exp -> Exp "+" . Exp                                (rule 28)

	num            shift, and enter state 22
	"("            shift, and enter state 23
	"!"            shift, and enter state 25
	"true"         shift, and enter state 26
	"false"        shift, and enter state 27
	id             shift, and enter state 44
	str            shift, and enter state 35

	Str            goto state 19
	Exp            goto state 73
	Term           goto state 21

State 47

	Exp -> Exp "-" . Exp                                (rule 29)

	num            shift, and enter state 22
	"("            shift, and enter state 23
	"!"            shift, and enter state 25
	"true"         shift, and enter state 26
	"false"        shift, and enter state 27
	id             shift, and enter state 44
	str            shift, and enter state 35

	Str            goto state 19
	Exp            goto state 72
	Term           goto state 21

State 48

	Exp -> Exp "*" . Exp                                (rule 30)

	num            shift, and enter state 22
	"("            shift, and enter state 23
	"!"            shift, and enter state 25
	"true"         shift, and enter state 26
	"false"        shift, and enter state 27
	id             shift, and enter state 44
	str            shift, and enter state 35

	Str            goto state 19
	Exp            goto state 71
	Term           goto state 21

State 49

	Exp -> Exp "/" . Exp                                (rule 31)

	num            shift, and enter state 22
	"("            shift, and enter state 23
	"!"            shift, and enter state 25
	"true"         shift, and enter state 26
	"false"        shift, and enter state 27
	id             shift, and enter state 44
	str            shift, and enter state 35

	Str            goto state 19
	Exp            goto state 70
	Term           goto state 21

State 50

	Exp -> Exp "%" . Exp                                (rule 32)
